--- a/src/index.css
+++ b/src/index.css
@@ -10,15 +10,18 @@ body {
   background-color: #18171f;
   overflow: hidden;
 }
-.headingL {
-  font-size: 32px;
-  line-height: 43px;
+
+.bodyM {
+  font-size: 18px;
+  line-height: 23px;
 }
 .headingM {
   font-size: 24px;
   line-height: 31px;
 }
-.bodyM {
-  font-size: 18px;
-  line-height: 23px;
+@media screen and (min-width: 768px) {
+  .headingL {
+    font-size: 32px;
+    line-height: 43px;
+  }
 }
