--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   src: url(assets/fonts/static/JetBrainsMono-Bold.ttf) format("truetype");
 }
 body {
-  background-color: #18171f;
+  background-color: #08070b;
   overflow: hidden;
 }
 
